--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="container">
         <div class="ob1 ob ob-xl">&nbsp;</div>
         <div class="ob2 ob ob-sm">&nbsp;</div>
+        <div class="ob3 ob ob-md">&nbsp;</div>
         <div class="row">
           <div class="col-md-4 t1">
             <div class="title-label">
@@ -30,6 +31,15 @@
               <h1>Walcz&nbsp;o</h1><br />
               <h1>Swoje&nbsp;prawa</h1><br />
               <h1>W&nbsp;internecie</h1><br />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 offset-md-8 t1">
+            <div class="title-label">
+              <h1 class="sm">Wyślij</h1><br />
+              <h1 class="sm">Email</h1><br />
+              <h1 class="sm">Do&nbsp;europosła</h1><br />
             </div>
           </div>
         </div>
