More 2nd page, reorder css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="ob1 ob ob-xl">&nbsp;</div>
         <div class="ob2 ob ob-sm">&nbsp;</div>
         <div class="ob3 ob ob-md">&nbsp;</div>
+        <div class="ob4 ob ob-sm2">&nbsp;</div>
         <div class="row">
           <div class="col-md-4 t1">
             <div class="title-label">
@@ -36,10 +37,10 @@
         </div>
         <div class="row">
           <div class="col-md-4 offset-md-8 t1">
-            <div class="title-label">
-              <h1 class="sm">Wyślij</h1><br />
-              <h1 class="sm">Email</h1><br />
-              <h1 class="sm">Do&nbsp;europosła</h1><br />
+            <div class="title-label sm">
+              <h1>Wyślij</h1><br />
+              <h1>Email</h1><br />
+              <h1>Do&nbsp;europosła</h1><br />
             </div>
           </div>
         </div>
@@ -49,6 +50,30 @@
       <div class="pani">&nbsp;</div>
       <div class="tlo">&nbsp;</div>
       <div class="container">
+        <div class="ob-group">
+          <div class="ob ob-md">&nbsp;</div>
+          <div class="ob ob-md">&nbsp;</div>
+          <div class="ob ob-md">&nbsp;</div>
+          <div class="ob ob-md">&nbsp;</div>
+        </div>
+        <div class="ob-group">
+            <div class="title-label md">
+              <h1>Poznaj</h1><br />
+              <h1>Zagrożenia</h1>
+            </div>
+            <div class="title-label md">
+              <h1>Dołącz</h1><br />
+              <h1>Na&nbsp;FB</h1>
+            </div>
+            <div class="title-label md">
+              <h1>Dołącz:</h1><br />
+              <h1>#saveyourinternet</h1>
+            </div>
+            <div class="title-label md">
+              <h1>Podaj</h1><br />
+              <h1>Dalej</h1>
+            </div>
+        </div>
         <div class="row">
           <div class="col-md-5 t1">
             <div class="title-label">
