--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,800|Open+Sans:400&amp;subset=latin-ext" rel="stylesheet">
   </head>
   <body>
-    <div class="container-fluid slide slide-1">
+    <section id="top" class="container-fluid slide slide-1">
       <div class="niebo">&nbsp;</div>
       <div class="container">
         <div class="ob1 ob ob-xl">&nbsp;</div>
@@ -44,10 +44,20 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="container-fluid slide slide-2">
+    </section>
+    <section id="slide2" class="container-fluid slide slide-2">
       <div class="pani">&nbsp;</div>
       <div class="tlo">&nbsp;</div>
+      <div class="wyslij-email">
+        <div class="position-relative">
+          <div class="ob ob-md position-absolute">&nbsp;</div>
+          <div class="title-label md position-absolute">
+            <h1>Wyślij</h1><br />
+            <h1>Email</h1><br />
+            <h1>Do&nbsp;Europosła</h1>
+          </div>
+        </div>
+      </div>
       <div class="container">
         <div class="ob-group">
           <div class="ob ob-md">&nbsp;</div>
@@ -64,7 +74,7 @@
               <h1>Dołącz</h1><br />
               <h1>Na&nbsp;FB</h1>
             </div>
-            <div class="title-label md">
+            <div class="title-label md pull-10">
               <h1>Dołącz:</h1><br />
               <h1>#saveyourinternet</h1>
             </div>
@@ -82,8 +92,112 @@
             </div>
           </div>
         </div>
+        <div class="row t2">
+          <div class="col-md-5 offset-md-2">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text">
+                  12 września Parlament Europejski głosować będzie nad dyrektywą o prawie autorskim na jednolitym rynku cyfrowym.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row t1">
+          <div class="col-md-5 offset-md-2">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text">
+                  Proponowane zapisy zagrażają podstawowym swobodom obywatelskim, ograniczają rozwój edukacji, nauki, biznesu i kultury. 
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+    <section id="zagrozenia" class="container-fluid slide slide3 zagrozenia">
+      <article>
+      <div class="row">
+        <div class="col-md-4 offset-md-2">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">
+                Niekontrolowane filtrowanie w imię ochrony praw autorskich, otwarcie furtki dla cenzury internetu
+              </h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="obrazek z1">&nbsp;</div>
+        </div>
+      </div>
+      </article>
+      <article>
+      <div class="row">
+        <div class="col-md-4 offset-md-2">
+          <div class="obrazek z2">&nbsp;</div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">
+                Nowe prawo autorskie dla wydawców
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      </article>
+      <article>
+      <div class="row">
+        <div class="col-md-4 offset-md-2">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">
+                Ograniczenie dostępu do materiałów edukacyjnych i blokowanie rozwoju nauki 
+              </h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="obrazek z3">&nbsp;</div>
+        </div>
+      </div>
+      </article>
+      <article>
+      <div class="row">
+        <div class="col-md-4 offset-md-2">
+          <div class="obrazek z4">&nbsp;</div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">
+                Dotkliwe ograniczenia w rozwoju sztucznej inteligencji i wymagających jej rozwiązań
+              </h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      </article>
+      <article>
+      <div class="row">
+        <div class="col-md-4 offset-md-2">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title">
+                Nowe prawo autorskie dla sportu  
+              </h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="obrazek z5">&nbsp;</div>
+        </div>
+      </div>
+      </article>
+    </section>
   <script src="dist/bundle.js"></script>
   </body>
 </html>
