remove .slide from #zagrozenia

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </div>
     </section>
-    <section id="zagrozenia" class="container-fluid slide slide3 zagrozenia">
+    <section id="zagrozenia" class="container-fluid slide3 zagrozenia">
       <article>
       <div class="row">
         <div class="col-md-4 offset-md-2">
