fix more semantic html - <header>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,800|Open+Sans:400&amp;subset=latin-ext" rel="stylesheet">
   </head>
   <body>
-    <section id="top" class="container-fluid slide slide-1">
+    <header id="top" class="container-fluid slide slide-1">
       <div class="niebo">&nbsp;</div>
       <div class="container">
         <div class="ob1 ob ob-xl">&nbsp;</div>
@@ -44,7 +44,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </header>
     <section id="slide2" class="container-fluid slide slide-2">
       <div class="pani">&nbsp;</div>
       <div class="tlo">&nbsp;</div>
