Add slide-4 and slide-5 along with footer

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </div>
     </section>
-    <section id="zagrozenia" class="container-fluid slide3 zagrozenia">
+    <section id="zagrozenia" class="container-fluid slide-3">
       <article>
       <div class="row">
         <div class="col-md-4 offset-md-2">
@@ -198,6 +198,19 @@
       </div>
       </article>
     </section>
+    <section id="codalej" class="container-fluid slide slide-4">
+      <div class="okowizjer"></div>
+      <div class="title-label">
+        <h1>I&nbsp;co&nbsp;się</h1><br />
+        <h1>Będzie&nbsp;działo</h1>
+      </div>
+    </section>
+    <section id="wiecej" class="container-fluid slide slide-5">
+      
+    </section>
+    <footer>
+      Centrum cyfrowe
+    </footer>
   <script src="dist/bundle.js"></script>
   </body>
 </html>
