Chcesz wiedzieć więcej and slide-4 content

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <header id="top" class="container-fluid slide slide-1">
       <div class="niebo">&nbsp;</div>
+      <div class="cc-logo">&nbsp;</div>
       <div class="container">
         <div class="ob1 ob ob-xl">&nbsp;</div>
         <div class="ob2 ob ob-sm">&nbsp;</div>
@@ -48,6 +49,8 @@
     <section id="slide2" class="container-fluid slide slide-2">
       <div class="pani">&nbsp;</div>
       <div class="tlo">&nbsp;</div>
+      <div class="kropeczki k1">&nbsp;</div>
+      <div class="kropeczki k2">&nbsp;</div>
       <div class="wyslij-email">
         <div class="position-relative">
           <div class="ob ob-md position-absolute">&nbsp;</div>
@@ -74,10 +77,12 @@
               <h1>Dołącz</h1><br />
               <h1>Na&nbsp;FB</h1>
             </div>
+            <a href="http:/saveyourinternet.eu">
             <div class="title-label md pull-10">
               <h1>Dołącz:</h1><br />
               <h1>#saveyourinternet</h1>
             </div>
+            </a>
             <div class="title-label md">
               <h1>Podaj</h1><br />
               <h1>Dalej</h1>
@@ -93,7 +98,7 @@
           </div>
         </div>
         <div class="row t2">
-          <div class="col-md-5 offset-md-2">
+          <div class="col-md-5 offset-md-1">
             <div class="card">
               <div class="card-body">
                 <p class="card-text">
@@ -104,7 +109,7 @@
           </div>
         </div>
         <div class="row t1">
-          <div class="col-md-5 offset-md-2">
+          <div class="col-md-5 offset-md-1">
             <div class="card">
               <div class="card-body">
                 <p class="card-text">
@@ -116,7 +121,8 @@
         </div>
       </div>
     </section>
-    <section id="zagrozenia" class="container-fluid slide-3">
+    <section id="zagrozenia" class="container-fluid zagrozenia slide-3">
+      <div class="kropeczki k2">&nbsp;</div>
       <article>
       <div class="row">
         <div class="col-md-4 offset-md-2">
@@ -199,14 +205,56 @@
       </article>
     </section>
     <section id="codalej" class="container-fluid slide slide-4">
-      <div class="okowizjer"></div>
+      <div class="okowizjer">&nbsp;</div>
+      <div class="kropeczki k1">&nbsp;</div>
       <div class="title-label">
         <h1>I&nbsp;co&nbsp;się</h1><br />
         <h1>Będzie&nbsp;działo</h1>
       </div>
+      <div class="card c1">
+        <div class="card-body">
+          <p class="card-text">
+            5 WRZEŚNIA –<br />
+            DEADLINE NA POPRAWKI
+          </p>
+        </div>
+        <div class="ob ob-sm">&nbsp;</div>
+      </div>
+      <div class="card c2">
+        <div class="card-body">
+          <p class="card-text">
+            12 WRZEŚNIA –<br />
+            GŁOSOWANIE NAD DYREKTYWĄ
+          </p>
+        </div>
+        <div class="ob ob-sm">&nbsp;</div>
+      </div>
     </section>
     <section id="wiecej" class="container-fluid slide slide-5">
-      
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <h1>Chcesz wiedzieć więcej?</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-2 offset-md-2">
+            <p>Przeczytaj stanowisko</p>
+          </div>
+          <div class="col-md-2">
+            <p>Dowiedz się więcej o centrum cyfrowym</p>
+          </div>
+          <div class="col-md-2">
+            <strong>#saveyourinternet</strong>
+          </div>
+          <div class="col-md-2">
+            <strong>Kontakt dla mediów:</strong>
+            <p>Amelia Kurp</p>
+            <p>a.kurp@sciencepr.pl</p>
+            <p>Kom.: +48 533 513 302</p>
+          </div>
+        </div>
+      </div>
     </section>
     <footer>
       Centrum cyfrowe
