Finish adding touches to html, fix mobile view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <h1>dla&nbsp;ludzi</h1><br />
             </div>
           </div>
-          <div class="col-md-5 offset-md-3 t2">
+          <div class="col-md-5 offset-md-3 offset-sm-2 t2">
             <div class="title-label">
               <h1>Walcz&nbsp;o</h1><br />
               <h1>Swoje&nbsp;prawa</h1><br />
@@ -61,7 +61,6 @@
           </div>
         </div>
       </div>
-      <div class="container">
         <div class="ob-group">
           <div class="ob ob-md">&nbsp;</div>
           <div class="ob ob-md">&nbsp;</div>
@@ -88,6 +87,7 @@
               <h1>Dalej</h1>
             </div>
         </div>
+      <div class="container">
         <div class="row">
           <div class="col-md-5 t1">
             <div class="title-label">
@@ -124,8 +124,10 @@
     <section id="zagrozenia" class="container-fluid zagrozenia slide-3">
       <div class="kropeczki k2">&nbsp;</div>
       <article>
-      <div class="row">
-        <div class="col-md-4 offset-md-2">
+        <div class="col2">
+          <div class="obrazek z1">&nbsp;</div>
+        </div>
+        <div class="col1">
           <div class="card">
             <div class="card-body">
               <h2 class="card-title">
@@ -134,17 +136,12 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="obrazek z1">&nbsp;</div>
-        </div>
-      </div>
       </article>
       <article>
-      <div class="row">
-        <div class="col-md-4 offset-md-2">
+        <div class="col1">
           <div class="obrazek z2">&nbsp;</div>
         </div>
-        <div class="col-md-4">
+        <div class="col2">
           <div class="card">
             <div class="card-body">
               <h2 class="card-title">
@@ -153,11 +150,12 @@
             </div>
           </div>
         </div>
-      </div>
       </article>
       <article>
-      <div class="row">
-        <div class="col-md-4 offset-md-2">
+        <div class="col2">
+          <div class="obrazek z3">&nbsp;</div>
+        </div>
+        <div class="col1">
           <div class="card">
             <div class="card-body">
               <h2 class="card-title">
@@ -166,17 +164,12 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="obrazek z3">&nbsp;</div>
-        </div>
-      </div>
       </article>
       <article>
-      <div class="row">
-        <div class="col-md-4 offset-md-2">
+        <div class="col1">
           <div class="obrazek z4">&nbsp;</div>
         </div>
-        <div class="col-md-4">
+        <div class="col2">
           <div class="card">
             <div class="card-body">
               <h2 class="card-title">
@@ -185,11 +178,12 @@
             </div>
           </div>
         </div>
-      </div>
       </article>
       <article>
-      <div class="row">
-        <div class="col-md-4 offset-md-2">
+        <div class="col2">
+          <div class="obrazek z5">&nbsp;</div>
+        </div>
+        <div class="col1">
           <div class="card">
             <div class="card-body">
               <h2 class="card-title">
@@ -198,10 +192,6 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="obrazek z5">&nbsp;</div>
-        </div>
-      </div>
       </article>
     </section>
     <section id="codalej" class="container-fluid slide slide-4">
@@ -211,6 +201,7 @@
         <h1>I&nbsp;co&nbsp;się</h1><br />
         <h1>Będzie&nbsp;działo</h1>
       </div>
+      <div class="series">
       <div class="card c1">
         <div class="card-body">
           <p class="card-text">
@@ -229,6 +220,25 @@
         </div>
         <div class="ob ob-sm">&nbsp;</div>
       </div>
+      <div class="card c3">
+        <div class="card-body">
+          <p class="card-text">
+            ? –<br />
+            TRIALOG
+          </p>
+        </div>
+        <div class="ob ob-sm">&nbsp;</div>
+      </div>
+      <div class="card c4">
+        <div class="card-body">
+          <p class="card-text">
+            ? –<br />
+            GŁOSOWANIE W PE
+          </p>
+        </div>
+        <div class="ob ob-sm">&nbsp;</div>
+      </div>
+    </div>
     </section>
     <section id="wiecej" class="container-fluid slide slide-5">
       <div class="container">
@@ -259,6 +269,9 @@
     <footer>
       Centrum cyfrowe
     </footer>
+  <div class="overlay">
+    
+  </div>
   <script src="dist/bundle.js"></script>
   </body>
 </html>
