Finish up overlay and html

--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
       <div class="wyslij-email">
         <div class="position-relative">
           <div class="ob ob-md position-absolute">&nbsp;</div>
+          <a href="#" class="wyslijemail">
           <div class="title-label md position-absolute">
             <h1>Wyślij</h1><br />
             <h1>Email</h1><br />
             <h1>Do&nbsp;Europosła</h1>
           </div>
+          </a>
         </div>
       </div>
         <div class="ob-group">
@@ -202,7 +204,7 @@
           <div class="overlay-content">
           <p>Do tej pory – dozwolony użytek do celów edukacyjnych był obowiązującym w całej Europie standardem. Tzw. „wyjątek edukacyjny” oznaczał, że w określonych ramach do celów edukacyjnych można było wykorzystywać fragmenty utworów chronionych prawem autorskim legalnie, a w większości państw (w tym w Polsce) także za darmo.  I jeśli wierzymy w równy dostęp do edukacji, rozwój nauki, i to, jak ważna jest edukacja przyszłych pokoleń, to właśnie tak powinno zostać!</p>
           <p>A jednak proponowany w dyrektywie <strong>Artykuł 4</strong> zagraża właśnie tej zasadzie. Wprowadza bowiem możliwość zastąpienia wyjątku edukacyjnego – rozwiązaniami licencyjnymi. Jeśli dane państwo członkowskie zdecyduje się na takie rozwiązanie, to  właściciel praw, kierując się swoim interesem, bądź poglądami będzie mógł zażądać opłaty licencyjnej od wykorzystania utworu. Samo to zaś może spowodować zmniejszenie dostępności do edukacji – przez zwiększenie kosztów korzystania z materiałów edukacyjnych, ale też filmów czy muzyki.</p> 
-          <p>Zależy Ci na edukacji? Dołącz do akcji <a href="http://copyrightforeducation.eu/" target="_blank">#COPYRIGHTFOREDUCATION!</p>
+          <p>Zależy Ci na edukacji? Dołącz do akcji <a href="http://copyrightforeducation.eu/" target="_blank">#COPYRIGHTFOREDUCATION!</a></p>
           </div>
           </div>
         </div>
@@ -259,6 +261,13 @@
             DEADLINE NA POPRAWKI
           </p>
         </div>
+        <div class="overlay-content">
+        <p>5 września o godzinie 13:00 mija termin, w którym europosłowie mogą składać poprawki do dyrektywy. Do tego momentu możemy ich przekonywać, by zgłaszali poprawki, które spowodują, że dyrektywa będzie utrzymywała równowagę między właścicielami praw a użytkownikami – taką, która nie będzie ograniczała obywatelskich swobód. </p>
+
+        <p>Warto wysłać im wiadomość! </p>
+
+        <p>Po 5 września – okienko na zgłaszanie poprawek będzie zamknięte, my zaś wreszcie dowiemy się, jakie propozycje zostaną poddane pod głosowanie 12 września. </p>
+        </div>
         <div class="ob ob-sm">&nbsp;</div>
       </div>
       <div class="card c2">
@@ -267,6 +276,17 @@
             12 WRZEŚNIA –<br />
             GŁOSOWANIE NAD DYREKTYWĄ
           </p>
+        </div>
+        <div class="overlay-content">
+          <p>To głosowanie może radykalnie zmienić kształt nowej dyrektywy o prawie autorskim. Tego dnia posłowie będą głosować nad: </p>
+          <ol>
+            <li>oryginalnym tekstem wniosku Komisji Europejskiej, </li>
+            <li>poprawkami przyjętymi przez JURI 20 czerwca, </li>
+            <li>wszystkimi innymi poprawkami złożonymi przez posłów do PE na posiedzeniu plenarnym</li>
+          </ol>
+          <p>Mamy nadzieję, że tego dnia Parlament Europejski stanie po stronie ludzi – usuwając najbardziej kontrowersyjne propozycje, które nie biorą pod uwagę interesów użytkowników i zagrażają rozwojowi kultury i edukacji, a wprowadzając takie, które chronią dobro wspólne (np. domenę publiczna).</p>
+
+          <p>Poprośmy ich o to już teraz!</p>
         </div>
         <div class="ob ob-sm">&nbsp;</div>
       </div>
@@ -277,6 +297,9 @@
             TRIALOG
           </p>
         </div>
+        <div class="overlay-content">
+          <p>W kolejnym kroku, Komisja Europejska, Parlament Europejski i Rada UE dochodzą do porozumienia w sprawie ostatecznej wersji dyrektywy. Moment rozpoczęcia trialogu zależy od tego, jak potoczy się wrześniowe głosowanie.</p>
+        </div>
         <div class="ob ob-sm">&nbsp;</div>
       </div>
       <div class="card c4">
@@ -286,32 +309,41 @@
             GŁOSOWANIE W PE
           </p>
         </div>
+        <div class="overlay-content">
+          <p>Na ostatnim etapie procedury Parlament Europejski zatwierdza/odrzuca wynegocjowany tekst dyrektywy. Dzieje się to po zakończeniu trialogu, który trwa tak długo, aż zostanie osiągnięty kompromis. Dyrektywa musi jednak zostać przyjęta przed wyborami do Parlamentu Europejskiego, które odbędą się na wiosnę 2019 roku.</p>
+        </div>
         <div class="ob ob-sm">&nbsp;</div>
       </div>
     </div>
     </section>
     <section id="wiecej" class="container-fluid slide slide-5">
       <div class="container">
-        <div class="row">
-          <div class="col-md-8 offset-md-2">
+        <div class="row mb-4">
+          <div class="col-md-10 offset-md-1">
             <h1>Chcesz wiedzieć więcej?</h1>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2 offset-md-2">
-            <p>Przeczytaj stanowisko</p>
+          <div class="col-md-3">
+          <a href="https://centrumcyfrowe.pl">
+            <img src="/assets/longread2.png" />
+            <p class="mt-4">Przeczytaj stanowisko</p>
+          </a>
           </div>
-          <div class="col-md-2">
-            <p>Dowiedz się więcej o centrum cyfrowym</p>
+          <div class="col-md-3">
+          <a href="https://centrumcyfrowe.pl">
+            <img src="/assets/CClogo.png" />
+            <p class="mt-4">Dowiedz się więcej o centrum cyfrowym</p>
+          </a>
           </div>
-          <div class="col-md-2">
-            <strong>#saveyourinternet</strong>
+          <div class="col-md-3">
+            <p><a href="https://saveyourinternet.eu"><strong>#save your internet</strong></a></p>
           </div>
-          <div class="col-md-2">
-            <strong>Kontakt dla mediów:</strong>
-            <p>Amelia Kurp</p>
-            <p>a.kurp@sciencepr.pl</p>
-            <p>Kom.: +48 533 513 302</p>
+          <div class="col-md-3">
+            <p><strong>Kontakt dla mediów:</strong></p>
+            <p>Amelia Kurp<br />
+            a.kurp@sciencepr.pl<br />
+            Kom.: +48 533 513 302</p>
           </div>
         </div>
       </div>
@@ -319,6 +351,7 @@
     <footer>
       Centrum cyfrowe
     </footer>
+  <div class="overlay-wrapper">
   <div class="overlay">
     <div class="container">
       
@@ -326,10 +359,10 @@
     <div class="bar">
       <a href="https://www.facebook.com/sharer/sharer.php?u=https://centrumcyfrowe.pl/reforma" class="fb-sharelink">&nbsp;</a>
       <a href="#" class="wyslijemail" title="Wyślij maila do europosła">&nbsp;</a>
-      <a href="https://centrumcyfrowe.pl" title="Poznaj stanowisko">&nbsp;</a>
+      <a href="https://centrumcyfrowe.pl" class="stanowisko" title="Poznaj stanowisko">&nbsp;</a>
     </div>
   </div>
-  <a href="mailto:" class="maildoposla d-hidden">&nbsp;</a>
+  </div>
   <script src="dist/bundle.js"></script>
   </body>
 </html>
