Make links open in new tab

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 offset-md-8 t1">
-            <a href="#" class="wyslijemail">
+            <a href="#" class="wyslijemail" target="_blank">
             <div class="title-label sm">
               <h1>Wyślij</h1><br />
               <h1>E-mail</h1><br />
@@ -69,7 +69,7 @@
       <div class="wyslij-email">
         <div class="position-relative">
           <div class="ob ob-md position-absolute">&nbsp;</div>
-          <a href="#" class="wyslijemail">
+          <a href="#" class="wyslijemail" target="_blank">
           <div class="title-label md position-absolute">
             <h1>Wyślij</h1><br />
             <h1>E-mail</h1><br />
@@ -91,13 +91,13 @@
               <h1>Zagrożenia</h1>
             </div>
             </a>
-            <a href="https://www.facebook.com/events/2104206849807052/">
+            <a href="https://www.facebook.com/events/2104206849807052/" target="_blank">
             <div class="title-label md">
               <h1>Dołącz</h1><br />
               <h1>Na&nbsp;FB</h1>
             </div>
             </a>
-            <a href="http:/saveyourinternet.eu">
+            <a href="http:/saveyourinternet.eu" target="_blank">
             <div class="title-label md pull-10">
               <h1>Dołącz:</h1><br />
               <h1>#saveyourinternet</h1>
@@ -348,17 +348,17 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-          <a href="https://centrumcyfrowe.pl">
+          <a href="https://centrumcyfrowe.pl/wiedza-o-reformie/" target="_blank">
             <p class="mt-4">Baza wiedzy o reformie</p>
           </a>
           </div>
           <div class="col-md-3">
-          <a href="https://centrumcyfrowe.pl">
+          <a href="https://centrumcyfrowe.pl" target="_blank">
             <p class="mt-4">Poznaj centrum cyfrowe</p>
           </a>
           </div>
           <div class="col-md-3">
-            <a href="https://saveyourinternet.eu">
+            <a href="https://saveyourinternet.eu" target="_blank">
             <p class="mt-4">#SAVEYOURINTERNET</p>
           </a>
           </div>
