Create bypass for wordpress-bootstrap-css plugin

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html class="no-js">
+  <script>
+    /* <head>
+    */
+  </script>
   <head>
     <meta charset="utf-8">
     <title>Centrum Cyfrowe</title>
