--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <h1>Chcesz wiedzieć więcej?</h1>
           </div>
         </div>
-        <div class="row m-4 d-none d-sm-block">
+        <div class="row m-4 d-none d-sm-flex">
           <div class="col-md-3">
             <img src="/assets/longread2.png" />
           </div>
