Add piwik and overlay close button

--- a/index.html
+++ b/index.html
@@ -384,10 +384,12 @@
     <div class="bar">
       <a href="https://www.facebook.com/sharer/sharer.php?u=https://centrumcyfrowe.pl/reforma" class="fb-sharelink">&nbsp;</a>
       <a href="#" class="wyslijemail" title="Wyślij maila do europosła">&nbsp;</a>
-      <a href="https://centrumcyfrowe.pl" class="stanowisko" title="Poznaj stanowisko">&nbsp;</a>
+      <a href="https://centrumcyfrowe.pl/wiedza-o-reformie/" class="stanowisko" title="Poznaj stanowisko">&nbsp;</a>
+      <a href="#" class="zamknij" title="Zamknij podgląd">&nbsp;</a>
     </div>
   </div>
   </div>
   <script src="dist/js/internetjestdlaludzi.js"></script>
+  <script type="text/javascript">var _paq = _paq || []; _paq.push(["trackPageView"]); _paq.push(["enableLinkTracking"]); (function() { var u ="https://piwik.centrumcyfrowe.pl/"; _paq.push(["setTrackerUrl", u+"piwik.php"]); _paq.push(["setSiteId", "3"]); var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript"; g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s); })();</script>
   </body>
 </html>
