--- a/index.html
+++ b/index.html
@@ -344,10 +344,7 @@
             <img src="/assets/saveyourinternet.png" />
           </div>
           <div class="col-md-3">
-             <p><strong>Kontakt dla mediów:</strong></p>
-            <p>Amelia Kurp<br />
-            a.kurp@sciencepr.pl<br />
-            Kom.: +48 533 513 302</p>
+             &nbsp;
           </div>
         </div>
         <div class="row">
@@ -366,8 +363,8 @@
             <p class="mt-4">#SAVEYOURINTERNET</p>
           </a>
           </div>
-          <div class="col-md-3 d-block d-sm-none">
-             <p><strong>Kontakt dla mediów:</strong></p>
+          <div class="col-md-3">
+            <p><strong>Kontakt dla mediów:</strong></p>
             <p>Amelia Kurp<br />
             a.kurp@sciencepr.pl<br />
             Kom.: +48 533 513 302</p>
@@ -391,5 +388,13 @@
   </div>
   <script src="dist/js/internetjestdlaludzi.js"></script>
   <script type="text/javascript">var _paq = _paq || []; _paq.push(["trackPageView"]); _paq.push(["enableLinkTracking"]); (function() { var u ="https://piwik.centrumcyfrowe.pl/"; _paq.push(["setTrackerUrl", u+"piwik.php"]); _paq.push(["setSiteId", "3"]); var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript"; g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s); })();</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124576176-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-124576176-1');
+  </script>
   </body>
 </html>
