Fix overlay display and closing, add styles to anchors etc

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       <div class="card c1">
         <div class="card-body">
           <p class="card-text">
-            5 WRZEŚNIA –<br />
+            <strong>5 WRZEŚNIA</strong> –<br />
             DEADLINE NA POPRAWKI
           </p>
         </div>
@@ -283,7 +283,7 @@
       <div class="card c2">
         <div class="card-body">
           <p class="card-text">
-            12 WRZEŚNIA –<br />
+            <strong>12 WRZEŚNIA</strong> –<br />
             GŁOSOWANIE NAD DYREKTYWĄ
           </p>
         </div>
@@ -303,7 +303,7 @@
       <div class="card c3">
         <div class="card-body">
           <p class="card-text">
-            ? –<br />
+            <strong>?</strong> –<br />
             TRIALOG
           </p>
         </div>
@@ -315,7 +315,7 @@
       <div class="card c4">
         <div class="card-body">
           <p class="card-text">
-            ? –<br />
+            <strong>?</strong> –<br />
             GŁOSOWANIE W PE
           </p>
         </div>
