Fix footer images, add title and ad CC logo in header

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </script>
   <head>
     <meta charset="utf-8">
-    <title>Centrum Cyfrowe</title>
-
+    <title>Internet jest dla ludzi — Centrum Cyfrowe</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="12 września Parlament Europejski głosować będzie nad dyrektywą o prawie autorskim na jednolitym rynku cyfrowym. Proponowane zapisy zagrażają podstawowym swobodom obywatelskim, ograniczają rozwój edukacji, nauki, biznesu i kultury. Poznaj zagrożenia i działaj!">
@@ -333,42 +332,33 @@
             <h1>Chcesz wiedzieć więcej?</h1>
           </div>
         </div>
-        <div class="row m-4 d-none d-sm-flex">
-          <div class="col-md-3">
-            <img src="/assets/longread2.png" />
-          </div>
-          <div class="col-md-3">
-            <img src="/assets/CClogo.png" />
-          </div>
-          <div class="col-md-3">
-            <img src="/assets/saveyourinternet.png" />
-          </div>
-          <div class="col-md-3">
-             &nbsp;
-          </div>
-        </div>
         <div class="row">
-          <div class="col-md-3">
+        <div class="col-md-9 row">
+          <div class="col-md-4">
           <a href="https://centrumcyfrowe.pl/wiedza-o-reformie/" target="_blank">
+            <img src="/assets/longread2.png" />
             <p class="mt-4">Baza wiedzy o reformie</p>
           </a>
           </div>
-          <div class="col-md-3">
-          <a href="https://centrumcyfrowe.pl" target="_blank">
+          <div class="col-md-4">
+            <a href="https://centrumcyfrowe.pl" target="_blank">
+            <img src="/assets/CClogo.png" />
             <p class="mt-4">Poznaj centrum cyfrowe</p>
           </a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <a href="https://saveyourinternet.eu" target="_blank">
+            <img src="/assets/saveyourinternet.png" />
             <p class="mt-4">#SAVEYOURINTERNET</p>
-          </a>
+            </a>
           </div>
-          <div class="col-md-3">
+        </div>
+        <div class="col-md-3">
             <p><strong>Kontakt dla mediów:</strong></p>
             <p>Amelia Kurp<br />
             a.kurp@sciencepr.pl<br />
             Kom.: +48 533 513 302</p>
-          </div>
+        </div>
         </div>
       </div>
     </section>
