Remove dashes from timeline, adjust height

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <div class="card c1">
         <div class="card-body">
           <p class="card-text">
-            <strong>5 WRZEŚNIA</strong> –<br />
+            <strong>5 WRZEŚNIA</strong><br />
             DEADLINE NA POPRAWKI
           </p>
         </div>
@@ -282,7 +282,7 @@
       <div class="card c2">
         <div class="card-body">
           <p class="card-text">
-            <strong>12 WRZEŚNIA</strong> –<br />
+            <strong>12 WRZEŚNIA</strong><br />
             GŁOSOWANIE NAD DYREKTYWĄ
           </p>
         </div>
@@ -302,7 +302,7 @@
       <div class="card c3">
         <div class="card-body">
           <p class="card-text">
-            <strong>?</strong> –<br />
+            <strong>?</strong><br />
             TRIALOG
           </p>
         </div>
@@ -314,7 +314,7 @@
       <div class="card c4">
         <div class="card-body">
           <p class="card-text">
-            <strong>?</strong> –<br />
+            <strong>?</strong><br />
             GŁOSOWANIE W PE
           </p>
         </div>
