Linkify email and tel in PR

--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
         <div class="col-md-3">
             <p><strong>Kontakt dla mediów:</strong></p>
             <p>Amelia Kurp<br />
-            a.kurp@sciencepr.pl<br />
-            Kom.: +48 533 513 302</p>
+            <a href="mailto:a.kurp@sciencepr.pl">a.kurp@sciencepr.pl</a><br />
+            Kom.: <a href="tel:+48533513302">+48 533 513 302</a></p>
         </div>
         </div>
       </div>
